# django-multisite2

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
django_multisite2.egg-info/: PKG-INFO
multisite/: admin.py  apps.py  exceptions.py  forms.py  hacks.py  hosts.py  managers.py  middleware.py  models.py  template_loader.py  test_settings.py  tests.py  threadlocals.py  utils.py
multisite/admin/: multisite_model_admin.py
multisite/management/commands/: update_public_suffix_list.py
multisite/middleware/: cookie_domain_middleware.py  dynamic_site_middleware.py
multisite/migrations/: 0001_initial.py  0003_alter_alias_options_alter_alias_unique_together_and_more.py  0004_alter_alias_managers.py
multisite/models/: managers.py
multisite/template/loaders/: filesystem.py
multisite/tests/: get_test_http_response.py  tests.py
multisite/tests/tests/: test_alias.py  test_cookie_domain_middleware.py  test_dynamic_site_middleware.py  test_template_loader.py
