[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file="_version.py"

[tool.setuptools.packages.find]
include = ["multisite*", "multisite/locale/*"]
exclude = [
    "examples*",
    "tools*",
    "docs*",
    "bin*",
    "image*",
]
namespaces = false  # true by default

[project]
name = "django-multisite2"
dynamic = ["version"]
description = "Serve multiple sites from a single Django application"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["django", "clinicedc", "edc", "clinical trials", "research", "data management", "esource", "encryption", "security"]
authors = [
    { name = "Leonid S Shestera", email = "leonid@shestera.ru" },
]
maintainers = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = '>=3.12'
dependencies = ["tldextract"]

[project.optional-dependencies]
test = [
    "coverage",
    "mock",
    "tox",
    "pluggy",
]

[project.urls]
Homepage = "http://github.com/erikvw/django-multisite2"
Documentation = "http://github.com/erikvw/django-multisite2/blob/develop/README.rst"
Repository = "http://github.com/erikvw/django-multisite2.git"
Changelog = "http://github.com/erikvw/django-multisite2/blob/main/CHANGES"



[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations", "_version.py"]

[tool.coverage.run]
parallel = false
branch = true
source = ["multisite"]

[tool.coverage.paths]
source = ["multisite"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
